--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://testuser:12345@localhost:5432/imagination?schema=public"
+USER = "projectmail840@gmail.com"
+APP_PASSWORD = "brxg vadu krki ifvv"
+COOKIE_NAME = "test"
+COOKIE_KEY = "HZNopuvpcDXFmD+/sq3PEH6HOyyUISTl8mJjaOvqLb0="
+SECRET_KEY = 'secret'
