--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "next": "14.2.15",
+    "next-auth": "^3.29.10",
     "pg": "^8.13.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "eslint": "^8",
